* Mon Apr 16 2018 Sundeep Anand <suanand@redhat.com> - 1.5.2
- ZNTA-1390 - Python client fuzzies my strings
- ZNTA-1382 - Should "--push-trans-only" be deprecated in the python client?

* Wed Oct 26 2016 Sundeep Anand <suanand@redhat.com> - 1.5.1
- Bug 1368381 - download only those which have translations
- ZNTA-106 - zanata-python-client installs a test module

* Thu Apr 14 2016 Sundeep Anand <suanand@redhat.com> - 1.5.0
- ZNTA-946 - zanata push StringIO fix
- ZNTA-303 - podir projects handling
- ZNTA-936 - redirection 301, 302 handling
- ZNTA-934 - java-client compatible zanata.xml
- ZNTA-927 - Project Status and Versions
- ZNTA-929 - zanata-python-client failed to retrieve version in non-git environment
- Bug 1139950 - Flexible Translation file naming

* Wed Jan 20 2016 Sundeep Anand <suanand@redhat.com> - 1.4.2
- Python 2.6 Support

* Tue Jan 12 2016 Sundeep Anand <suanand@redhat.com> - 1.4.1
- Implemented zanata init (ZNTA-780)
- Bug ZNTA-853 - Crash when pushing local translations
- Bug 1206995 - allow anonymous pull
- Implemented zanata stats

* Wed Dec 02 2015 Sundeep Anand <suanand@redhat.com> - 1.4.0
- Bug 1215274 - specify minimum percentage completion on pull
- Rename zanatalib/project.py to zanatalib/projectutils.py
- Bug 1156236 - use locale aliases defined in the server
- added ProjectContext, Improved help, fixed code issues
- added <src-dir> and <trans-dir> in zanata.xml
- refactor code - added config to centralize rest resources
- Organize exception messages, added test.
- HTTP to HTTPS redirect - auto, if found in httplib2 response
- Rename zanatalib/client.py to zanatalib/resource.py
- flake8 changes and addition of: make flake8
- added requirements.txt

* Thu Sep 17 2015 Sean Flanigan <sflaniga@redhat.com> - 1.3.22
- Disable copytrans by default (ZNTA-664)
- Deprecate --no-copytrans option and add --copytrans

* Tue Mar 03 2015 Anish Patil <apatil@redhat.com> - 1.3.21
- Changed setup.py, fixed installation issue