@@ -65,7 +65,7 @@ setup(
         'License :: OSI Approved :: GNU Lesser General Public License (LGPL)',
         'Operating System :: Unix',
         'Programming Language :: Python',
-        'Programming Language :: Python :: 2.6',
-        'Programming Language :: Python :: 2.7',
+        'Programming Language :: Python :: 3.5',
+        'Programming Language :: Python :: 3.6',
     ],
 )
