@@ -1,3 +1,6 @@
+* Fri Mar 08 2019 Sundeep Anand <suanand@redhat.com> - 1.5.3
+- ZNTA-2791 - Port Zanata Python client to Python 3
+
 * Mon Apr 16 2018 Sundeep Anand <suanand@redhat.com> - 1.5.2
 - ZNTA-1390 - Python client fuzzies my strings
 - ZNTA-1382 - Should "--push-trans-only" be deprecated in the python client?
